Upgrade to Java17 and refactoring